--- a/Week 7/HW7_beam_seach_to_student.ipynb
+++ b/Week 7/HW7_beam_seach_to_student.ipynb
@@ -55,7 +55,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "bc8487c8-acf8-4271-d4ea-a19d9f8c168c"
+        "outputId": "dbfacf7b-df9d-4c32-be47-15d316461896"
       },
       "id": "q5gRmwtdiYjp",
       "execution_count": 1,
@@ -64,49 +64,49 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "--2025-02-21 15:58:57--  https://www.dropbox.com/s/ht12ua9vpkep6l8/hw9_vocab.txt?dl=0\n",
-            "Resolving www.dropbox.com (www.dropbox.com)... 162.125.1.18, 2620:100:6016:18::a27d:112\n",
-            "Connecting to www.dropbox.com (www.dropbox.com)|162.125.1.18|:443... connected.\n",
+            "--2025-02-22 12:02:37--  https://www.dropbox.com/s/ht12ua9vpkep6l8/hw9_vocab.txt?dl=0\n",
+            "Resolving www.dropbox.com (www.dropbox.com)... 162.125.6.18, 2620:100:601c:18::a27d:612\n",
+            "Connecting to www.dropbox.com (www.dropbox.com)|162.125.6.18|:443... connected.\n",
             "HTTP request sent, awaiting response... 302 Found\n",
             "Location: https://www.dropbox.com/scl/fi/zlkw3il9cj4c121vtrrxh/hw9_vocab.txt?rlkey=m5gflik1lhvpenwydd3gfwvp7&dl=0 [following]\n",
-            "--2025-02-21 15:58:57--  https://www.dropbox.com/scl/fi/zlkw3il9cj4c121vtrrxh/hw9_vocab.txt?rlkey=m5gflik1lhvpenwydd3gfwvp7&dl=0\n",
+            "--2025-02-22 12:02:38--  https://www.dropbox.com/scl/fi/zlkw3il9cj4c121vtrrxh/hw9_vocab.txt?rlkey=m5gflik1lhvpenwydd3gfwvp7&dl=0\n",
             "Reusing existing connection to www.dropbox.com:443.\n",
             "HTTP request sent, awaiting response... 302 Found\n",
-            "Location: https://uc00638c611e94db04f22d0d11ef.dl.dropboxusercontent.com/cd/0/inline/CkhJtU2CSYrfNaCX1NFHEcvRCrAPYUcqOXsJoFSFImrFI22TnioKnpoQzvKImS-Zr9obSpYyw9E98vocjn2dpf9doeCOusDYqMky1wFbxBjth7ntBPed8Wmd1_FkzNLWy-sAM31z7-tpWSk6rvw5mNGY/file# [following]\n",
-            "--2025-02-21 15:58:58--  https://uc00638c611e94db04f22d0d11ef.dl.dropboxusercontent.com/cd/0/inline/CkhJtU2CSYrfNaCX1NFHEcvRCrAPYUcqOXsJoFSFImrFI22TnioKnpoQzvKImS-Zr9obSpYyw9E98vocjn2dpf9doeCOusDYqMky1wFbxBjth7ntBPed8Wmd1_FkzNLWy-sAM31z7-tpWSk6rvw5mNGY/file\n",
-            "Resolving uc00638c611e94db04f22d0d11ef.dl.dropboxusercontent.com (uc00638c611e94db04f22d0d11ef.dl.dropboxusercontent.com)... 162.125.1.15, 2620:100:6016:15::a27d:10f\n",
-            "Connecting to uc00638c611e94db04f22d0d11ef.dl.dropboxusercontent.com (uc00638c611e94db04f22d0d11ef.dl.dropboxusercontent.com)|162.125.1.15|:443... connected.\n",
+            "Location: https://uc802a9bf8cfde067c44626823ee.dl.dropboxusercontent.com/cd/0/inline/CkldfvSfTK1nhRt971pgU7ilNnyoA0YI_kUyXqe_4YrYVFGTKNj74gpzE7BjmOXF35raQEryEcWYRVMVMVAI6edDb70Q-Ekc0sCGvcEsjtnbK8LY2za14fm8_8IFpf7XFfPkxBnvnLCOz0XZLrvXO3FD/file# [following]\n",
+            "--2025-02-22 12:02:38--  https://uc802a9bf8cfde067c44626823ee.dl.dropboxusercontent.com/cd/0/inline/CkldfvSfTK1nhRt971pgU7ilNnyoA0YI_kUyXqe_4YrYVFGTKNj74gpzE7BjmOXF35raQEryEcWYRVMVMVAI6edDb70Q-Ekc0sCGvcEsjtnbK8LY2za14fm8_8IFpf7XFfPkxBnvnLCOz0XZLrvXO3FD/file\n",
+            "Resolving uc802a9bf8cfde067c44626823ee.dl.dropboxusercontent.com (uc802a9bf8cfde067c44626823ee.dl.dropboxusercontent.com)... 162.125.4.15, 2620:100:6019:15::a27d:40f\n",
+            "Connecting to uc802a9bf8cfde067c44626823ee.dl.dropboxusercontent.com (uc802a9bf8cfde067c44626823ee.dl.dropboxusercontent.com)|162.125.4.15|:443... connected.\n",
             "HTTP request sent, awaiting response... 200 OK\n",
             "Length: 78729 (77K) [text/plain]\n",
             "Saving to: ‘vocab.txt’\n",
             "\n",
-            "vocab.txt           100%[===================>]  76.88K  --.-KB/s    in 0.02s   \n",
+            "vocab.txt           100%[===================>]  76.88K  --.-KB/s    in 0.01s   \n",
             "\n",
-            "2025-02-21 15:58:58 (4.52 MB/s) - ‘vocab.txt’ saved [78729/78729]\n",
+            "2025-02-22 12:02:39 (5.20 MB/s) - ‘vocab.txt’ saved [78729/78729]\n",
             "\n",
-            "--2025-02-21 15:58:59--  https://www.dropbox.com/s/okmri7cnd729rr5/hw9_model.bin?dl=0\n",
-            "Resolving www.dropbox.com (www.dropbox.com)... 162.125.1.18, 2620:100:6016:18::a27d:112\n",
-            "Connecting to www.dropbox.com (www.dropbox.com)|162.125.1.18|:443... connected.\n",
+            "--2025-02-22 12:02:39--  https://www.dropbox.com/s/okmri7cnd729rr5/hw9_model.bin?dl=0\n",
+            "Resolving www.dropbox.com (www.dropbox.com)... 162.125.6.18, 2620:100:601c:18::a27d:612\n",
+            "Connecting to www.dropbox.com (www.dropbox.com)|162.125.6.18|:443... connected.\n",
             "HTTP request sent, awaiting response... 302 Found\n",
             "Location: https://www.dropbox.com/scl/fi/es8o6240q6qogbulewk2s/hw9_model.bin?rlkey=r4rjl9zuwwg72g7ws5mecv47r&dl=0 [following]\n",
-            "--2025-02-21 15:58:59--  https://www.dropbox.com/scl/fi/es8o6240q6qogbulewk2s/hw9_model.bin?rlkey=r4rjl9zuwwg72g7ws5mecv47r&dl=0\n",
+            "--2025-02-22 12:02:39--  https://www.dropbox.com/scl/fi/es8o6240q6qogbulewk2s/hw9_model.bin?rlkey=r4rjl9zuwwg72g7ws5mecv47r&dl=0\n",
             "Reusing existing connection to www.dropbox.com:443.\n",
             "HTTP request sent, awaiting response... 302 Found\n",
-            "Location: https://uce63a03e21c14da22f45f537373.dl.dropboxusercontent.com/cd/0/inline/Ckg2xhmO8USYBm609m68-aOWx-K12GEMoTouvhEC7cYrwvIzcBydPCZ5IZfR3LWVb92SCCu0uB5Yj5v1Cx6w52-T8tCJdFwk8MTLNSu_QP3fHi6BB9H-e6VSFEaXjP-pAhP3xfaJQ1IWQjL2HMEmeXFh/file# [following]\n",
-            "--2025-02-21 15:58:59--  https://uce63a03e21c14da22f45f537373.dl.dropboxusercontent.com/cd/0/inline/Ckg2xhmO8USYBm609m68-aOWx-K12GEMoTouvhEC7cYrwvIzcBydPCZ5IZfR3LWVb92SCCu0uB5Yj5v1Cx6w52-T8tCJdFwk8MTLNSu_QP3fHi6BB9H-e6VSFEaXjP-pAhP3xfaJQ1IWQjL2HMEmeXFh/file\n",
-            "Resolving uce63a03e21c14da22f45f537373.dl.dropboxusercontent.com (uce63a03e21c14da22f45f537373.dl.dropboxusercontent.com)... 162.125.1.15, 2620:100:6016:15::a27d:10f\n",
-            "Connecting to uce63a03e21c14da22f45f537373.dl.dropboxusercontent.com (uce63a03e21c14da22f45f537373.dl.dropboxusercontent.com)|162.125.1.15|:443... connected.\n",
+            "Location: https://uca16f7891fd7f3ea107785700d6.dl.dropboxusercontent.com/cd/0/inline/CknQ2RDZGD1c1NXfWpr0P-gw26U2Hiev1nRR508nrWYegkFWtbVkXBZ6KE6T5zSBSpeGFQsPUmiIx-kQVoPCJsWkkoTbvC8nva6DUYuakWD7knOk2Iy-ojrUvaqACUT_trp_U1YtCd5QDrtpOQ30Cb-T/file# [following]\n",
+            "--2025-02-22 12:02:39--  https://uca16f7891fd7f3ea107785700d6.dl.dropboxusercontent.com/cd/0/inline/CknQ2RDZGD1c1NXfWpr0P-gw26U2Hiev1nRR508nrWYegkFWtbVkXBZ6KE6T5zSBSpeGFQsPUmiIx-kQVoPCJsWkkoTbvC8nva6DUYuakWD7knOk2Iy-ojrUvaqACUT_trp_U1YtCd5QDrtpOQ30Cb-T/file\n",
+            "Resolving uca16f7891fd7f3ea107785700d6.dl.dropboxusercontent.com (uca16f7891fd7f3ea107785700d6.dl.dropboxusercontent.com)... 162.125.4.15, 2620:100:601c:15::a27d:60f\n",
+            "Connecting to uca16f7891fd7f3ea107785700d6.dl.dropboxusercontent.com (uca16f7891fd7f3ea107785700d6.dl.dropboxusercontent.com)|162.125.4.15|:443... connected.\n",
             "HTTP request sent, awaiting response... 302 Found\n",
-            "Location: /cd/0/inline2/Ckj8ioluwyeXff7XB4qUEfWDR-fyD1rkaJwouOEyu9PgNS7wsHo-GWr_h94IKwYYVc9Bcb8vxRjzhubX_FQyfCDP2ReXvLeydrLyGttFASJSt2kBPrefetJ0XOJCO6wYNV0fCRWre8mlw3tvpqPxg5vxwTa0B_UXFil6FLT5Ys4tcskq1SyKFOyXTf9R8FIjlkSD9QKHqEQpY2rH1c19cXkX4zbM8EKCTAwGetc1IOUiE9hPpT-PD-F-Dia40jsiIYkHooDyxWPuQQbOO8UIKvzhaC_aX7Wee0YVuCegd9bH61GUohq0kzKA0OAxsKsbQDcnDitGBr0n0VNH34yHtvDHiuRO8rYYS0au2EQOfMfR6Ws-rz43CPTv1BamcleK6x0/file [following]\n",
-            "--2025-02-21 15:59:00--  https://uce63a03e21c14da22f45f537373.dl.dropboxusercontent.com/cd/0/inline2/Ckj8ioluwyeXff7XB4qUEfWDR-fyD1rkaJwouOEyu9PgNS7wsHo-GWr_h94IKwYYVc9Bcb8vxRjzhubX_FQyfCDP2ReXvLeydrLyGttFASJSt2kBPrefetJ0XOJCO6wYNV0fCRWre8mlw3tvpqPxg5vxwTa0B_UXFil6FLT5Ys4tcskq1SyKFOyXTf9R8FIjlkSD9QKHqEQpY2rH1c19cXkX4zbM8EKCTAwGetc1IOUiE9hPpT-PD-F-Dia40jsiIYkHooDyxWPuQQbOO8UIKvzhaC_aX7Wee0YVuCegd9bH61GUohq0kzKA0OAxsKsbQDcnDitGBr0n0VNH34yHtvDHiuRO8rYYS0au2EQOfMfR6Ws-rz43CPTv1BamcleK6x0/file\n",
-            "Reusing existing connection to uce63a03e21c14da22f45f537373.dl.dropboxusercontent.com:443.\n",
+            "Location: /cd/0/inline2/CkkwPydQhWvdsYfSwfbQcHZATYQbgXLfL34exlrpQAY3k_K1vFOuNcG35uxzwL-TM1MuRz4hn0EsSMu8gRseTgpXvZDmmGyg91vwILuWJS6NgspuRQ52hS6HII_jjBAX_Bj0sSEUZkgb0Rm8gvdW25zkIrZOrVsoSo6YmBwyAuktPe28G2kPMtnw0WhaQ6Eh0AFWF_4CBWCBcYSpACl7FtNsRmTBKJ1ZwM3cEKZpWbZ088DjanLj07-slwyZl2WSC-2iKsOPRRVLJpiAH_UhcQt6L74u1444oQp5jYMNxKVo7lVTkW2HGksg9m0OtuGCWqGL0aUVSE5uM7xfEMR8pRdR8-d-BT5kTB7BCJvFaJAvHz-K27ZwKYQFu-SPkLezknQ/file [following]\n",
+            "--2025-02-22 12:02:40--  https://uca16f7891fd7f3ea107785700d6.dl.dropboxusercontent.com/cd/0/inline2/CkkwPydQhWvdsYfSwfbQcHZATYQbgXLfL34exlrpQAY3k_K1vFOuNcG35uxzwL-TM1MuRz4hn0EsSMu8gRseTgpXvZDmmGyg91vwILuWJS6NgspuRQ52hS6HII_jjBAX_Bj0sSEUZkgb0Rm8gvdW25zkIrZOrVsoSo6YmBwyAuktPe28G2kPMtnw0WhaQ6Eh0AFWF_4CBWCBcYSpACl7FtNsRmTBKJ1ZwM3cEKZpWbZ088DjanLj07-slwyZl2WSC-2iKsOPRRVLJpiAH_UhcQt6L74u1444oQp5jYMNxKVo7lVTkW2HGksg9m0OtuGCWqGL0aUVSE5uM7xfEMR8pRdR8-d-BT5kTB7BCJvFaJAvHz-K27ZwKYQFu-SPkLezknQ/file\n",
+            "Reusing existing connection to uca16f7891fd7f3ea107785700d6.dl.dropboxusercontent.com:443.\n",
             "HTTP request sent, awaiting response... 200 OK\n",
             "Length: 8690974 (8.3M) [application/octet-stream]\n",
             "Saving to: ‘model.bin’\n",
             "\n",
-            "model.bin           100%[===================>]   8.29M  --.-KB/s    in 0.1s    \n",
+            "model.bin           100%[===================>]   8.29M  --.-KB/s    in 0.08s   \n",
             "\n",
-            "2025-02-21 15:59:01 (70.7 MB/s) - ‘model.bin’ saved [8690974/8690974]\n",
+            "2025-02-22 12:02:41 (110 MB/s) - ‘model.bin’ saved [8690974/8690974]\n",
             "\n"
           ]
         }
@@ -176,7 +176,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "a6fb0d04-22d1-48b9-da1c-112d949c2acb"
+        "outputId": "e701b3e9-9c78-4af1-b3b6-20e6ce020381"
       },
       "id": "6bZt9R0JjL8l",
       "execution_count": 4,
@@ -219,7 +219,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "4d6ce429-58a9-44a0-d391-10826672a6c3"
+        "outputId": "806e4bd8-955d-4c65-b6e0-e404a5e28245"
       },
       "id": "mOEWXsXzjpn6",
       "execution_count": 5,
@@ -260,7 +260,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "7dc46e10-f4b0-4625-fd52-74743ac11b81"
+        "outputId": "cde2117b-35de-4e1c-dbfd-d1c15b99d3d1"
       },
       "id": "sem3jbjoF_d8",
       "execution_count": 6,
@@ -374,14 +374,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 43,
+      "execution_count": 10,
       "id": "bdd42c8a",
       "metadata": {
         "id": "bdd42c8a",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "5c442ac7-2548-461c-dbca-c0d9ccb4c68b"
+        "outputId": "1201c273-0256-4b6b-851b-a756ee6a5339"
       },
       "outputs": [
         {
@@ -482,7 +482,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 17,
+      "execution_count": 11,
       "id": "d76c6f52",
       "metadata": {
         "id": "d76c6f52"
@@ -501,7 +501,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 18,
+      "execution_count": 12,
       "id": "bb1dd75a",
       "metadata": {
         "id": "bb1dd75a"
@@ -566,7 +566,7 @@
         "id": "pFJMfeEIP_Qx"
       },
       "id": "pFJMfeEIP_Qx",
-      "execution_count": 31,
+      "execution_count": 13,
       "outputs": []
     },
     {
@@ -587,10 +587,10 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "6dEqm3prRTRh",
-        "outputId": "2c183e66-bd69-481d-ba5c-bf57839ea1d1"
+        "outputId": "83d4d0e5-712c-4d9c-e7bf-23ba641b4e52"
       },
       "id": "6dEqm3prRTRh",
-      "execution_count": 58,
+      "execution_count": 14,
       "outputs": [
         {
           "output_type": "stream",
@@ -612,20 +612,20 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "eouQWrquQM94",
-        "outputId": "5ae3b038-555f-41db-cfdd-1a7dae0d19b5"
+        "outputId": "1587d6c0-3aff-4602-d769-69bfba0c9b0e"
       },
       "id": "eouQWrquQM94",
-      "execution_count": 29,
+      "execution_count": 15,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "True"
+              "tensor([[   5, 5629, 2372, 4053,   46,    3, 1249,    6,    3,  607,    2]])"
             ]
           },
           "metadata": {},
-          "execution_count": 29
+          "execution_count": 15
         }
       ]
     },
@@ -635,11 +635,34 @@
         "probs"
       ],
       "metadata": {
-        "id": "vjzAJcX6Q8hI"
+        "id": "vjzAJcX6Q8hI",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "4e7ff808-3fe6-40ae-f519-dbd412fbdaaf"
       },
       "id": "vjzAJcX6Q8hI",
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 16,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[0.031523026525974274,\n",
+              " 0.3082837462425232,\n",
+              " 0.8540562391281128,\n",
+              " 0.06756693869829178,\n",
+              " 0.6541438102722168,\n",
+              " 0.029132941737771034,\n",
+              " 0.3098832070827484,\n",
+              " 0.553607702255249,\n",
+              " 0.041552864015102386]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 16
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -661,6 +684,18 @@
     {
       "cell_type": "code",
       "source": [
+        "max_gen_length=10"
+      ],
+      "metadata": {
+        "id": "QiB3Z4OXjEXZ"
+      },
+      "id": "QiB3Z4OXjEXZ",
+      "execution_count": 24,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "def gen_greedy(seed):\n",
         "  print(\"-Greedy-\")\n",
         "  output_tokenID, probs = greedy_decode(seed, tokenizer)\n",
@@ -676,7 +711,7 @@
         "id": "JK7VYfs-ST6g"
       },
       "id": "JK7VYfs-ST6g",
-      "execution_count": 63,
+      "execution_count": 25,
       "outputs": []
     },
     {
@@ -713,19 +748,19 @@
         "id": "nuNGGK1xSldY"
       },
       "id": "nuNGGK1xSldY",
-      "execution_count": 64,
+      "execution_count": 26,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "execution_count": 65,
+      "execution_count": 27,
       "id": "d40a3cb0",
       "metadata": {
         "id": "d40a3cb0",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "11edf85b-e40e-4a11-8679-491e750db3ea"
+        "outputId": "98739773-bc64-4844-c666-7858e52e9713"
       },
       "outputs": [
         {
@@ -751,7 +786,7 @@
             "america s desert aisles   0.20\n",
             "\n",
             "-Greedy-\n",
-            "people to balloon to make a criminal with a dog with a callous rival   0.14\n",
+            "people to balloon to make a criminal with a dog with   0.12\n",
             "-Unnormalized-\n",
             "people to balloon for a criminal   0.00\n",
             "people to balloon for a criminal with trump   0.00\n",
@@ -760,7 +795,7 @@
             "people to balloon for a criminal with trump   0.13\n",
             "\n",
             "-Greedy-\n",
-            "next phenom english clubs 2 call another deal in the same arrivals   0.12\n",
+            "next phenom english clubs 2 call another deal in the same   0.13\n",
             "-Unnormalized-\n",
             "next s blist revue   0.00\n",
             "next phenom english clubs 1 a chance to be back   0.00\n",
@@ -775,7 +810,7 @@
             "picture korean a bonanza of pancakes   0.00\n",
             "-Normalized-\n",
             "picture korean a bonanza of contemplation times of trump s son   0.12\n",
-            "picture korean a bonanza of contemplation times of trump s prime directive   0.11\n",
+            "picture korean a bonanza of pancakes   0.07\n",
             "\n",
             "-Greedy-\n",
             "on the catwalk in saudi arabia   0.19\n",
@@ -783,15 +818,14 @@
             "on the billboard chart   0.00\n",
             "on the catwalk in saudi arabia   0.00\n",
             "-Normalized-\n",
-            "on the whole30 diet vowing to eat smarter carbs to be insufficient   0.25\n",
-            "on the whole30 diet vowing to eat smarter carbs for because you want   0.23\n",
+            "on the whole30 diet vowing to eat smarter carbs to be   0.27\n",
+            "on the whole30 diet vowing to eat smarter carbs for because   0.26\n",
             "\n"
           ]
         }
       ],
       "source": [
         "sample_seeds = [\"to\", \"america\", \"people\", \"next\", \"picture\", \"on\"]\n",
-        "max_gen_len=10\n",
         "for seed in sample_seeds:\n",
         "  gen_greedy(seed)\n",
         "  gen_beam(seed, normalized=False)\n",
@@ -895,10 +929,10 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "KTxOms-CYTpR",
-        "outputId": "db80485e-05d2-48bb-84c6-5c2a0c5cf069"
+        "outputId": "c7b5bab7-7f2a-472c-e3d2-ac28dd07b5c1"
       },
       "id": "KTxOms-CYTpR",
-      "execution_count": 66,
+      "execution_count": 28,
       "outputs": [
         {
           "output_type": "stream",
@@ -947,10 +981,8 @@
     },
     "colab": {
       "provenance": [],
-      "gpuType": "T4",
       "include_colab_link": true
-    },
-    "accelerator": "GPU"
+    }
   },
   "nbformat": 4,
   "nbformat_minor": 5
